--- a/map/css/style.css
+++ b/map/css/style.css
@@ -14,8 +14,9 @@ body {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 100%;
+  width: 150px;
   background-color: white;
+
 }
 
 .card:hover {
