--- a/map/css/style.css
+++ b/map/css/style.css
@@ -9,15 +9,17 @@ body {
 .map {
   height: 100%;
   width: 100%;
-  float: left;
+  position: absolute;
+
 }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 150px;
+  width: 25%;
   background-color: white;
-
+  position: relative;
+  float:left;
 }
 
 .card:hover {
@@ -68,13 +70,13 @@ body {
   content: "X";
 }
 
-#rightbox{ 
+/* #rightbox{ 
   position: relative;
   z-index: 2000;
   float:right; 
   width:25%; 
   height:280px; 
-} 
+}  */
 /* .overlay {     
   width: 100px;
   position: absolute;
