--- a/map/css/style.css
+++ b/map/css/style.css
@@ -19,7 +19,11 @@ body {
   width: 25%;
   background-color: white;
   position: relative;
-  float:left;
+  float:right;
+  border-radius: 25px;
+  margin-top: 20px;
+  margin-right: 20px;
+  padding: 15px;
 }
 
 .card:hover {
