--- a/map/css/style.css
+++ b/map/css/style.css
@@ -1,3 +1,9 @@
+/*
+    style.css 
+    Auteur : team Rendev
+    Date : 16.03.20
+*/
+
 html,
 body {
   height: 100%;
@@ -74,23 +80,3 @@ body {
   content: "X";
 }
 
-/* #rightbox{ 
-  position: relative;
-  z-index: 2000;
-  float:right; 
-  width:25%; 
-  height:280px; 
-}  */
-/* .overlay {     
-  width: 100px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;      
-  background-color: rgba(255, 50, 50, 0.5);     
-}
-
-.containerDiv {
-  position: relative;
-  width: 500px;
-} */
